--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -4,7 +4,7 @@ header{
     align-items: center;
     margin: auto;
 
-    .header-logo{
+    .header__logo{
         width: 200px;
         padding: 20px;
     }
