--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -29,7 +29,7 @@ footer{
             color: $white;
         }
 
-        .info--contact{
+        .info__contact{
             @include boxbasic;
             @include column;
         }
@@ -43,7 +43,7 @@ footer{
             justify-content: right;
             gap: 5%;
             flex-direction: row-reverse;
-            .info--contact{
+            .info__contact{
                 @include row;
                 justify-content: flex-end;
                 align-items: center;
