--- a/sass/partials/_button.scss
+++ b/sass/partials/_button.scss
@@ -71,7 +71,7 @@
   }
 }
 
-// flèches en mode tablette
+// flèches en mode tablette************************************************************
 .chevron {
   display: none;
   width: 70px;
@@ -100,7 +100,7 @@
 }
 
 
-//PREMIERE VERSION AVEC LES FLECHES
+//PREMIERE VERSION AVEC LES FLECHES************************************************************************************************
 
 .right {
   cursor: pointer;
@@ -128,7 +128,7 @@
   transform: translateX(+510px);
 }
 
-//DEUXIEME VERSION AVEC LE MENU
+//DEUXIEME VERSION AVEC LE MENU******************************************************************************************************
 // VOIR AVEC CEDRIC CE QUE J'AI MANQUE POUR QUE CA NE MARCHE PAS
 
 .entries + .nav--tab .menu__container .menu__container--extend {
