--- a/sass/partials/_loader.scss
+++ b/sass/partials/_loader.scss
@@ -1,64 +1,39 @@
-.loader{
-    width: 300px;
-    height: 300px;
+.loader {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin: auto;
+  z-index: 9999;
+  // display: none; /*cache le loader*/
+
+  .table {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px;
-    margin: auto;
-    .table{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        .icon{
-            width: 30px;
-            height: 100px;
-            display: flex;
-            justify-content: center;
-            img{
-                max-height: 100px;
-            }
-            .knife{
-                max-width: 70px;
-            }
-        }
-        .plate{
-            width: 100px;
-            height: 100px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            .ring{
-                width: 100px;
-                height: 100px;
-                position: absolute;
-//                border: 3px $black solid;
-                background: conic-gradient($black, $middle-grey); 
-                border-radius: 50px;
-            }
-            .center{
-                width: 60px;
-                height: 60px;
-                position: absolute;
-                z-index: 1;
-                background-color: $white;
-                border-radius: 35px;
-            }
-/*            .circle{
-                width: 60px;
-                height: 60px;
-                position: absolute;
-                z-index: 2;
-                border: 3px $black solid;
-                border-radius: 40px;
-            }*/
-        }
-    }
-}
+    animation: shake 0.4s 4s;
 
-/*l'idée finale étant que ring tourne pour donner
- l'impression de chargement,
-et que fork et knife se secouent légèrement
-(inclinaison à gauche puis à droite,
-faible et vif, comme un tremblement)*/
+    .plate {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      border: 10px $white solid;
+      position: absolute;
+      transform: rotate(45deg);
+      box-sizing: border-box;
+    }
+    .plate::before {
+      content: "";
+      position: absolute;
+      box-sizing: border-box;
+      inset: -10px;
+      border-radius: 50%;
+      border: 25px solid $black;
+      animation: fillplate 4s linear;
+    }
+  }
+}
