--- a/sass/partials/_menus.scss
+++ b/sass/partials/_menus.scss
@@ -1,15 +1,3 @@
-.header {
-  @include row;
-  justify-content: center;
-
-  .fa-solid {
-    display: inline-block;
-    position: absolute;
-    left: 30px;
-    top: 30px;
-  }
-}
-
 .restaurant {
   @include boxbasic;
   @include column;
@@ -206,10 +194,10 @@
       }
     }
 
-    .choice-price {
+    .recipes__price {
       padding: 0 20px 15px 0;
-      align-self: flex-end;
       text-align: right;
+      align-self: flex-end;
     }
 
     .recipes__selected {
