--- a/sass/index.css
+++ b/sass/index.css
@@ -45,6 +45,7 @@
   gap: 20px;
   margin: auto;
   z-index: 9999;
+  display: none; /*cache le loader*/
 }
 .loader .table {
   display: flex;
@@ -575,11 +576,17 @@ footer .info .info__contact {
   font-weight: 300;
   text-transform: uppercase;
   margin: 0;
+  /*        @media (min-width: 768px) and (max-width: 1024px){
+        display: none;
+      }*/
 }
 .restaurant__menu .recipes__stylebar {
   width: 40px;
   height: 3px;
   background-color: #008766;
+  /*    @media (min-width: 768px) and (max-width: 1024px){
+        display: none;
+      }*/
 }
 @media (min-width: 1025px) {
   .restaurant__menu {
@@ -654,12 +661,6 @@ footer .info .info__contact {
   }
   .restaurant__menu .nav--tab .navigation .recipes_button:focus h2 {
     font-weight: 700;
-  }
-  .restaurant__menu .nav--tab .menu__container--extend h2 {
-    display: none;
-  }
-  .restaurant__menu .nav--tab .menu__container--extend .recipes__stylebar {
-    display: none;
   }
 }
 
