--- a/sass/partials/_loader.scss
+++ b/sass/partials/_loader.scss
@@ -9,7 +9,7 @@
   gap: 20px;
   margin: auto;
   z-index: 9999;
-  // display: none; /*cache le loader*/
+             display: none; /*cache le loader*/
 
   .table {
     display: flex;
