--- a/sass/partials/_button.scss
+++ b/sass/partials/_button.scss
@@ -18,14 +18,15 @@
   right: 80px;
   z-index: 1;
   width: 80px;
-  height: 30px;
+  height: 15px;
+  padding: 5px;
+  font-size: 0.8em;
   background-color: $third-color;
   color: $nouveau;
   border: none;
   border-radius: 3px;
-  line-height: 30px;
+  line-height: 15px;
   justify-content: center;
-  @include fat;
   @include ombrage-medium;
 }
 
@@ -38,7 +39,7 @@
   width: 30px;
   height: 30px;
 
-  button {
+  span {
     border: none;
     position: relative;
     align-self: center;
@@ -53,6 +54,7 @@
       display: flex;
       position: absolute;
       background-color: $white;
+      color: $black;
       z-index: 1;
       opacity: 1;
       transition: opacity 0.4s;
