--- a/sass/partials/_animations.scss
+++ b/sass/partials/_animations.scss
@@ -1,34 +1,103 @@
 
 @keyframes shake {
     0% {
-        transform: scaleX(1)
+        transform: scaleX(1);
+        opacity: 1;
     }
     10%,30%,50%,70%,90%{
-        transform: rotate(-2deg)
+        transform: rotate(-2deg);
     }
-    20%,40%,60%,80% {
-        transform: rotate(2deg)
+    20%,40%,60% {
+        transform: rotate(2deg);
+    }
+    80% {
+        transform: rotate(2deg);
+        opacity: 1;
     }
     100% {
-        transform: scaleX(1)
+        transform: scaleX(1);
+        opacity: 0;
+    }
+}
+
+@keyframes fork {
+    0% {
+        transform: scaleX(1);
+        opacity: 1;
+    }
+    10%,30%,50%,70%,90%{
+        transform: rotate(-2deg);
+    }
+    20%,40%,60%{
+        transform: rotate(2deg);
+    }
+    80% {
+        transform: rotate(2deg);
+        opacity: 1;
+    }
+    100% {
+        transform: scaleX(1);
+        opacity: 0;
+    }
+}
+
+@keyframes knife {
+    0% {
+        transform: translateX(520px);
+        opacity: 1;
+    }
+    20%,40%,60%{
+        transform: rotate(-2deg);
+    }
+    10%,30%,50%,70%,90%{
+        transform: rotate(2deg);
+    }
+    80%{
+        transform: rotate(-2deg);
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 0;
     }
 }
 
 @keyframes fillplate {
     0%   {
-        clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)
+        clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0);
+        opacity: 1;
     }
-    15%  {
-        clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)
+    25%  {
+        clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0);
     }
-    45%  {
-        clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)
+    50%  {
+        clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%);
     }
-    80%  {
-        clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)
+    75%  {
+        clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%);
+        opacity: 1;
     }
-    100% {
-        clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)
+    90% {
+        clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0);
     }
-}  
+    100%{
+        opacity: 0;
+    }    
+}
+
+@keyframes fader-background {
+    0%{opacity: 1;}
+    70%{opacity: 1;}
+    100%{opacity: 0;}
+}
+
+@keyframes bigger{
+    0%{transform: scale(1); opacity: 1;}
+    20%{transform: scale(2);}
+    40%{transform: scale(1.5);}
+    60%{transform: scale(2);}
+    80%{transform: scale(1.5);opacity: 1;}
+    98%{transform: scale3d(2);}
+    100%{opacity: 0;}
+}
  
