--- a/sass/partials/_animations.scss
+++ b/sass/partials/_animations.scss
@@ -23,7 +23,7 @@
 @keyframes fork {
     0% {
         transform: scaleX(1);
-        opacity: 1;
+//        opacity: 1;
     }
     10%,30%,50%,70%,90%{
         transform: rotate(-2deg);
@@ -33,18 +33,18 @@
     }
     80% {
         transform: rotate(2deg);
-        opacity: 1;
+//        opacity: 1;
     }
     100% {
         transform: scaleX(1);
-        opacity: 0;
+//        opacity: 0;
     }
 }
 
 @keyframes knife {
     0% {
         transform: translateX(520px);
-        opacity: 1;
+//        opacity: 1;
     }
     20%,40%,60%{
         transform: rotate(-2deg);
@@ -54,18 +54,18 @@
     }
     80%{
         transform: rotate(-2deg);
-        opacity: 1;
+//        opacity: 1;
     }
     100% {
         transform: translateX(0);
-        opacity: 0;
+//        opacity: 0;
     }
 }
 
 @keyframes fillplate {
     0%   {
         clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0);
-        opacity: 1;
+ //       opacity: 1;
     }
     25%  {
         clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0);
@@ -75,13 +75,13 @@
     }
     75%  {
         clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%);
-        opacity: 1;
+//        opacity: 1;
     }
     90% {
         clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0);
     }
     100%{
-        opacity: 0;
+//        opacity: 0;
     }    
 }
 
