--- a/sass/index.css
+++ b/sass/index.css
@@ -83,6 +83,7 @@
   }
   100% {
     opacity: 0;
+    visibility: hidden;
   }
 }
 @keyframes bigger {
@@ -122,7 +123,7 @@
   gap: 40px;
   margin: auto;
   z-index: 9999;
-  animation: fader-background 5s forwards;
+  animation: fader-background 4s forwards;
 }
 .loader .logo {
   animation: bigger 1.5s 1.5s forwards;
