--- a/sass/partials/_animations.scss
+++ b/sass/partials/_animations.scss
@@ -88,7 +88,9 @@
 @keyframes fader-background {
     0%{opacity: 1;}
     70%{opacity: 1;}
-    100%{opacity: 0;}
+    100%{opacity: 0;
+    visibility: hidden;
+}
 }
 
 @keyframes bigger{
